--- a/style.scss
+++ b/style.scss
@@ -3,11 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.moving-car{
+    height: 150px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    animation: move-diagonal 8s linear 1s infinite;
 }
 #circle{
     animation: main-part 4s infinite linear;
@@ -59,3 +68,19 @@ body{
         transform: translate(30px, 30px);
     }
 }
+@keyframes move-diagonal {
+    0% {
+        transform: translate(0, 0) rotate(110deg);
+        opacity: 0;
+    }
+    25%{
+        opacity: 1;
+    }
+    75%{
+        opacity: 1;
+    }
+    100% {
+        transform: translate(100vw, 100vh) rotate(110deg);
+        opacity: 0;
+    }
+  }
